--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "swiper": "^7.3.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.37",
